--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,56 @@
-.App {
-  text-align: center;
+.get__users {
+  cursor: pointer;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.navbar {
+  display: flex;
+  background: #fbfbfb;
+  height: 4rem;
+  width: 100%;
+  align-items: center;
+  box-shadow: 0px 0px 10px #d4d4d4;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.sub__nav {
+  display: flex;
+  width: 90%;
+  justify-content: space-between;
+  margin: auto;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.data__main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.user__item {
   display: flex;
   flex-direction: column;
+  padding: 2.5rem;
+  box-shadow: 0px 0px 10px #d2d2d2;
+  border-radius: 0.4rem;
+  margin-top: 4rem;
+  margin-left: 5rem;
+  transition: 0.4s;
+  cursor: pointer;
+}
+
+.user__item>img {
+  width: 10rem;
+}
+
+.logo {
+  font-size: 1.5rem;
+  margin: 0;
+  display: flex;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  font-weight: 700;
+  font-family: fantasy;
+  font-style: oblique;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.user__item:hover {
+  transform: scale(1.07);
 }
